История изменений:
==================
[+] добавлено
[-] удалено
[*] изменено
[!] исправлено
[/] пояснение
[=] совместимость
==================

2015-08-26, v.3.1.6.0
―――――――
[=] Совместимость с FAR 3 build 4406.
[*] Замена модификатора "ʼ" на "`".
[!] Editor\AutoActions: Учёт ControlKeyState.

2015-05-21, v.3.1.5.1
―――――――
  Common\rhsConfig:
[+] Адаптация ширины окна к ширине FAR.
[!] Исправление ошибки в параметрах checkbox.

2015-05-20, v.3.1.5.0
―――――――
  Common\rhsConfig:
[+] Добавление команд для LuaEUM, LuaPUM и LumFLS.
  LuaUM:
[+] Добавление обозначений подменю для прямого доступа к ним.
[!] Исключение текста пункта меню при доступе к главному меню.

2015-03-04, v.3.1.4.2
―――――――
[!] Исключение far.LuafarVersion, убранного в FAR 3 build 4285.

2015-02-15, v.3.1.4.1
―――――――
[!] Исправление дублирования последней строки
    при обработке части текста, выделенного в редакторе.
    (В FAR 3 build 3861 работало нормально.)

2015-01-10, v.3.1.4.0
―――――――
[=] Совместимость с FAR 3 build 4190.
[+] LuaUM: Добавление набора "Коррекция" в "Изменение символов".

2014-08-26, v.3.1.3.0
―――――――
  Calendar:
[+] Режим ввода смещения в днях.
[*] Ограничение года в режиме ввода даты (для умещения даты в ячейке).
  LuaUM:
[*] Возможность настройки LumBinds.lua (см. LumBinds.lua.example).
[!] Расширение сообщения об ошибке в случае, если пункт меню не найден.
  LuaUM\scripts\Transcript:
[+] Добавление наборов "Транслитерация": Греческий ↔ Латинский.
  Editor:  
[!] VoidTruncate: Исправление выделения до конца файла.
[!] TextTemplate: Исправление ошибки при отсутствии файла kit_config.lua .

2014-07-02, v.3.1.2.2
―――――――
  CharsMap:
[!] Исправление ошибки режима ввода названия символа
    при отображении всех символов с введённым названием (John Doe).

2014-07-01, v.3.1.2.1
―――――――
  CharsMap:
[+] Отображение всех символов с введённым названием.
[+] Отображение количества символов с введённым названием.
[!] Ввод пробела для фильтрации в режиме ввода названия символа