@@ -1,7 +1,7 @@
 Rh_Scripts pack
 
 [Info]
-Ver. : 3.1.6.0
+Ver. : 3.1.6.1
 Date : 2015-08-26
 Ware : Freeware
 Lic. : MIT
