@@ -8,6 +8,11 @@
 [=] совместимость
 ==================
 
+2015-08-26, v.3.1.6.1
+―――――――
+  LuaUM:
+[*] Использование LumBinds.lua.example вместо LumBinds.lua .
+
 2015-08-26, v.3.1.6.0
 ―――――――
 [=] Совместимость с FAR 3 build 4406.
